--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,8 @@ services:
   nodeserver:
     container_name: nodeserver
     build: ./nodeserver  # Node.js app directory
+    ports:
+      - "3001:3000"  # Expose port 80 on the host
     networks:
       - shopping_assistant
     volumes:
