--- a/nginx/prod/default.conf
+++ b/nginx/prod/default.conf
@@ -1,7 +1,28 @@
+
+server {
+    listen 80;
+    listen [::]:80;
+    server_name payoor.store www.payoor.store api.payoor.store shop.payoor.store;
+
+    return 301 https://$host$request_uri;
+}
+
 server {
     listen 443 ssl;
     listen [::]:443 ssl;
-    server_name payoor.store www.payoor.store api.payoor.store shop.payoor.store;
+    server_name www.payoor.store;
+
+    ssl_certificate /etc/nginx/data/certs/fullchain.pem;
+    ssl_certificate_key /etc/nginx/data/certs/privkey.pem;
+
+    return 301 https://shop.payoor.store$request_uri;
+}
+
+
+server {
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    server_name payoor.store;
 
     ssl_certificate /etc/nginx/data/certs/fullchain.pem;
     ssl_certificate_key /etc/nginx/data/certs/privkey.pem;
@@ -10,8 +31,12 @@ server {
 }
 
 server {
-    listen 80;
+    listen 443 ssl;
+    listen [::]:443 ssl;
     server_name shop.payoor.store;
+
+    ssl_certificate /etc/nginx/data/certs/fullchain.pem;
+    ssl_certificate_key /etc/nginx/data/certs/privkey.pem;
 
     location / {
         proxy_pass http://shopui:8082/;
@@ -30,10 +55,6 @@ server {
         add_header 'Access-Control-Allow-Credentials' 'true' always;
 
         if ($request_method = 'OPTIONS') {
-            add_header 'Access-Control-Allow-Origin' "$cors_origin" always;
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
-            add_header 'Access-Control-Allow-Headers' 'Origin, X-Requested-With, Content-Type, Accept, Authorization' always;
-            add_header 'Access-Control-Allow-Credentials' 'true' always;
             add_header 'Access-Control-Max-Age' 1728000;
             add_header 'Content-Type' 'text/plain charset=UTF-8';
             add_header 'Content-Length' 0;
@@ -43,8 +64,12 @@ server {
 }
 
 server {
-    listen 80;
+    listen 443 ssl;
+    listen [::]:443 ssl;
     server_name api.payoor.store;
+
+    ssl_certificate /etc/nginx/data/certs/fullchain.pem;
+    ssl_certificate_key /etc/nginx/data/certs/privkey.pem;
 
     location / {
         proxy_pass http://nodeserver:3000;
@@ -63,10 +88,6 @@ server {
         add_header 'Access-Control-Allow-Credentials' 'true' always;
 
         if ($request_method = 'OPTIONS') {
-            add_header 'Access-Control-Allow-Origin' "$cors_origin" always;
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
-            add_header 'Access-Control-Allow-Headers' 'Origin, X-Requested-With, Content-Type, Accept, Authorization' always;
-            add_header 'Access-Control-Allow-Credentials' 'true' always;
             add_header 'Access-Control-Max-Age' 1728000;
             add_header 'Content-Type' 'text/plain charset=UTF-8';
             add_header 'Content-Length' 0;
