--- a/nginx/prod/default.conf
+++ b/nginx/prod/default.conf
@@ -88,6 +88,10 @@ server {
         add_header 'Access-Control-Allow-Credentials' 'true' always;
 
         if ($request_method = 'OPTIONS') {
+            add_header 'Access-Control-Allow-Origin' "$cors_origin" always;
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
+            add_header 'Access-Control-Allow-Headers' 'Origin, X-Requested-With, Content-Type, Accept, Authorization' always;
+            add_header 'Access-Control-Allow-Credentials' 'true' always;
             add_header 'Access-Control-Max-Age' 1728000;
             add_header 'Content-Type' 'text/plain charset=UTF-8';
             add_header 'Content-Length' 0;
