--- a/ui/package.json
+++ b/ui/package.json
@@ -14,6 +14,7 @@
     "nuxt": "^2.15.8",
     "socket.io-client": "^4.7.5",
     "vue": "^2.7.10",
+    "vue-lazyload": "^1.3.4",
     "vue-server-renderer": "^2.7.10",
     "vue-template-compiler": "^2.7.10"
   },
