--- a/nodeserver/package.json
+++ b/nodeserver/package.json
@@ -36,6 +36,7 @@
     "axios": "^1.7.9",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
+    "csv-parse": "^5.6.0",
     "dotenv": "^16.4.5",
     "exceljs": "^4.4.0",
     "express": "^5.1.0",
