--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,7 +49,7 @@ services:
       - NODE_ENV=production
     depends_on:
       - redisdb
-      - mongodb
+      #- mongodb
     restart: always
 
   nginx:
