--- a/nginx/prod/default.conf
+++ b/nginx/prod/default.conf
@@ -72,7 +72,7 @@ server {
     ssl_certificate_key /etc/nginx/data/certs/privkey.pem;
 
     location / {
-        proxy_pass http://nodeapi:3000;
+        proxy_pass http://nodeserver:3001;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
