--- a/nodeserver/package.json
+++ b/nodeserver/package.json
@@ -40,13 +40,13 @@
     "dotenv": "^16.4.5",
     "exceljs": "^4.4.0",
     "express": "^5.1.0",
+    "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^3.6.0",
     "mongoose": "^8.0.0",
     "multer": "^2.0.0",
     "node-telegram-bot-api": "^0.66.0",
     "npm-run-all": "^4.1.5",
-    "redis": "^5.0.0",
     "resend": "^1.1.0",
     "speakeasy": "^2.0.0"
   },
