--- a/nginx/prod/default.conf
+++ b/nginx/prod/default.conf
@@ -64,7 +64,7 @@ server {
 }
 
 upstream node_backend {
-    server nodeserver1:3001 max_fails=3 fail_timeout=10s;
+    server nodeserver:3001 max_fails=3 fail_timeout=10s;
     server nodeserver2:3001 max_fails=3 fail_timeout=10s;
     server nodeserver3:3001 max_fails=3 fail_timeout=10s;
     server nodeserver4:3001 max_fails=3 fail_timeout=10s;
