--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,7 @@ docker_commands.txt
 langchainmastery/
 python_repl/
 node_internals/
+advance_node_starter/
+zazencodes-season-2/
+kafka/
+advance_node_starter/
