--- a/nodeserver/package.json
+++ b/nodeserver/package.json
@@ -49,7 +49,8 @@
     "node-telegram-bot-api": "^0.66.0",
     "npm-run-all": "^4.1.5",
     "resend": "^1.1.0",
-    "speakeasy": "^2.0.0"
+    "speakeasy": "^2.0.0",
+    "kafkajs": "^2.2.4"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.5",
