--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@ advance_node_starter/
 zazencodes-season-2/
 kafka/
 advance_node_starter/
+/deliveryserviceclient
+/deliveryserviceapi
+/deliveryserviceadmin
