--- a/nodeserver/package.json
+++ b/nodeserver/package.json
@@ -43,14 +43,15 @@
     "firebase": "^11.8.1",
     "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
+    "kafkajs": "^2.2.4",
     "mongodb": "^3.6.0",
     "mongoose": "^8.0.0",
     "multer": "^2.0.0",
+    "node-cron": "^4.2.1",
     "node-telegram-bot-api": "^0.66.0",
     "npm-run-all": "^4.1.5",
     "resend": "^1.1.0",
-    "speakeasy": "^2.0.0",
-    "kafkajs": "^2.2.4"
+    "speakeasy": "^2.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.5",
